--- a/css/loading.css
+++ b/css/loading.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url( "../img/__ia_thumb.jpg" );
+	background-image: url( "../img/background.jpg" );
 	background-color: #fff;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
