--- a/css/loading.css
+++ b/css/loading.css
@@ -16,9 +16,9 @@ body {
 #container {
 	position: fixed;
 	text-align: center;
-	left: 50%;
+	left: 0%;
 	top: 45%;
 	margin-top: -120px;
 	margin-left: -150px;
-	width: 300px;
+	width: 100%;
 }
