--- a/css/loading.css
+++ b/css/loading.css
@@ -13,6 +13,17 @@ body {
 	color: white;
 }
 
+#musicmenu {
+	background-color: #00000080;
+	color: white;
+	position: fixed;
+	text-align: left;
+	left: 0%;
+	bottom: 0%;
+	width: 20%;
+	overflow: auto;
+}
+
 #container {
 	position: fixed;
 	text-align: center;
