--- a/css/loading.css
+++ b/css/loading.css
@@ -13,15 +13,15 @@ body {
 	color: white;
 }
 
-#musicmenu {
+#info {
 	background-color: #00000080;
 	color: white;
-	position: fixed;
-	text-align: left;
-	left: 0%;
-	bottom: 0%;
-	width: 20%;
-	overflow: auto;
+	position: absolute;
+	text-align: center;
+	bottom: 25%;
+    	top: 60%;
+    	left: 20%;
+	width: 60%;
 }
 
 #container {
