--- a/css/loading.css
+++ b/css/loading.css
@@ -8,9 +8,20 @@ body {
 	overflow: hidden;
 }
 
+h1 {
+	font-weight: 400;
+}
+h2 {
+	font-weight: 900;
+}
+h3 {
+	font-weight: 400;
+}
+
 #funnytext {
 	background-color: #00000080;
 	color: white;
+	font-family: 'Big Shoulders Text', sans-serif;
 }
 
 #info {
@@ -18,10 +29,11 @@ body {
 	color: white;
 	position: absolute;
 	text-align: center;
-	bottom: 25%;
-    	top: 60%;
+	bottom: 10%;
+    	top: 70%;
     	left: 20%;
 	width: 60%;
+	font-family: 'Big Shoulders Text', sans-serif;
 }
 
 #container {
