--- a/css/loading.css
+++ b/css/loading.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@400;900&display=swap');
 body {
 	background-image: url( "../img/bF3NbnI.gif" );
 	background-color: #fff;
@@ -22,7 +21,7 @@ h3 {
 #funnytext {
 	background-color: #00000080;
 	color: white;
-	font-family: 'Big Shoulders Text', sans-serif;
+	font-family: 'Impact', sans-serif;
 }
 
 #info {
