--- a/css/loading.css
+++ b/css/loading.css
@@ -21,7 +21,7 @@ h3 {
 #funnytext {
 	background-color: #00000080;
 	color: white;
-	font-family: 'Impact', sans-serif;
+	font-family: 'Big Shoulders Text', sans-serif;
 }
 
 #info {
